# assetlib

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  image.c  image.h  model.c  obj_utils.c  obj_utils.h  png_utils.c  png_utils.h
include/: audio.h  model.h  obj_utils.h  png_utils.h  wav_utils.h
include/assetlib/: assetlib.hpp  audio.h  image.h  model.h  obj_utils.h  png_utils.h  wav_utils.h
src/: audio.c  image.c  model.c  obj_utils.c  png_utils.c  wav_utils.c
